@startuml

skinparam roundcorner 8

skinparam class {
	BackgroundColor #C0C0C0
	ArrowColor black
	BorderColor IndianRed
}

skinparam stereotypeCBackgroundColor gold
skinparam stereotypeIBackgroundColor AntiqueWhite
skinparam stereotypeABackgroundColor yellow

title \n1.1 - Aggregate barname rizi\n

class Person << (E,LightSkyBlue) >> {
  - String firstName
  - String lastName
  - String phoneNumber
  - String nationalCode
}
Person --o Student

class Student << (E,LightSkyBlue) >> {
  - String sid
  - Number avgGrade
  - Number VahedPassed
  + CourseTermi[] getAllPassedCourses()
  + void addEntekhabVahedTerm()
  + EntekhabVahedTerm getCurrentTermEntekhabVahed()
  + Boolean hasGraduated()
}


Student o-- EducationalTerm : EntranceTerm
enum EducationalSeason << (e,WhiteSmoke) enumeration>> {
  Fall
  Spring
}
class EducationalTerm << (V,LawnGreen) >> {
  - string year
}
EducationalTerm o-- EducationalSeason

Person --o Professor
class Professor << (E,LightSkyBlue) >> {
  - String pid
}

class Chart << (E,LightSkyBlue) >> {
  - id
  - requiredCourses
  - optionalCourses
  - optionalCourseCount
  - selectiveCourseGroups
}

Chart "*" o-- "1" EducationalTerm
EntekhabVahedTerm "*" o-- "1" EducationalTerm
Chart "1" --o "1" Student

GraduationHandler <-- Student
class GraduationHandler << (S,HotPink) Singleton >> {
  + Boolean hasPassedRequiredCourses()
  + Boolean hasPassedSelectiveCourses()
  + Boolean hasPassedEnoughOptionalCourses()
}

package CourseAgg {
  Chart "*" o--- "*" Course
  abstract class Niaz {
  }

  class Course << (E,LightSkyBlue) >> {
    - String id
    - String name
    - Number vahed
    + void addPishNiaz()
    + void addHamNiaz()
  }
  class NiazDarsi << (V,LawnGreen) >> {
    - Course course
  } 
  Niaz <|-- NiazDarsi

  class NiazVahedi << (V,LawnGreen) >> {
    - Number minVahedPassed
  } 
  Niaz <|-- NiazVahedi
  Course "1" o-- "*" Niaz : Pishniaz
  Course "1" o-- "*" NiazDarsi : Hamniaz
  Course "1" o-- "2" CourseVahed : courseType 

  class CourseVahed << (V,LawnGreen) >> {
    - Number theoryVahed
    - Number theoryPractical
  }
}

package CourseTermiAgg {
  
  class CourseTermi << (E,LightSkyBlue) >> {
    - String year
    - String term
    - Boolean isInternship
    - Number capacity
    - Boolean isInternship
    + Boolean hasCapacity()
  }
  CourseTermi "*" *---- "1" Course
  CourseTermi "*" o-- "*" Professor : professor
  ' CourseTermi "*" o-- "*" Student : students
  CourseTermi "1" o-- "*" WeeklyTimeSlot : weekly schedule\nand final exam
  CourseTermi "1" o-- "1" College : presentation college
  class WeeklyTimeSlot << (V,LawnGreen) >> {
    - Time startTime
    - Time endTime
    + Boolean interfere()
  }
  WeeklyTimeSlot o-- DayOfWeek : weekDay
  enum DayOfWeek << (e,WhiteSmoke) enumeration>> {
    Sat
    Sun
    Mon
    Tue
    Wed
    Thu
    Fri
  }
  enum College << (e,WhiteSmoke) enumeration>> {
    ece
    centeralCollegeOfEngineering
  }

}


class EntekhabVahedTerm << (E,LightSkyBlue) >> {
  - Number minVahed
  - Number maxVahed
  + CourseTermi[] getPassedCourses()
  + Boolean akhzCourse()
  + Boolean applyAndFinalize()
  + Boolean revertAkhzCourse()
  + CourseTermi[] getRegisteredCourses()
}
EntekhabVahedTerm "*" --o "1" Student

package CourseAkhzShodeAgg {
  EntekhabVahedTerm "1" o-- "*" CourseAkhzShode
  
  enum AkhzCourseState << (e,WhiteSmoke) enumeration>> {
    Registered
    Pending
    HazfEzterari
    HazfPezeshki
    Registered in HazfEzterari
    Pending in HazfEzafe
    Passed
    Failed
  }
  class CourseAkhzShode << (E,LightSkyBlue) >> {
  }
  CourseAkhzShode "*" o-- "1" CourseTermi
  CourseAkhzShode "1" o-- "1" AkhzCourseState
}
AkhzCourseHandler <-- CourseAkhzShode
class AkhzCourseHandler << (S,HotPink) Singleton >> {
  + Student[] studentsWhoRegisteredCourse()
  + Boolean arePishniazDependenciesResolved()
}



class MojavezHandler << (S,HotPink) Singleton >> {
}



package MojavezAgg {
  MojavezHandler <-- DarkhastMojavez
  ' MojavezHandler <-- AkhzCourseError
  enum AkhzCourseError << (e,WhiteSmoke) enumeration >> {
    AdamReayatPishNiaz
    KafAkhzVahed
    SaqfAkhzVahed
    TadakholZamanClass
    TadakholZamanEmtehan
    AkhzMojadad
    EtmamZarfiat
    AkhzKarAmooziWithCourse
  }

  class DarkhastMojavez << (V,LawnGreen) >> {
    - String description
  }
  DarkhastMojavez o-- AkhzCourseError
  DarkhastMojavez o-- MojavezState
  CourseAkhzShode "1" o-- "*" DarkhastMojavez
  enum MojavezState << (e,WhiteSmoke) enumeration >> {
    Rejected
    Accepted
    Pending
  }
}

@enduml
